--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>Test</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="./css/main.css" />
+    <title>Портфолио | AlexeyNewDeveloper</title>
+  </head>
+  <body>
+    <h1>Test</h1>
+  </body>
+</html>
