--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@ title: Главная | AlexeyNewDeveloper
     <ul class="projects__list">
       {% for project in site.projects %}
       <li
-        class="projects__project-container projects__content-direction_{{project.position}}"
+        class="projects__block_default projects__project-container projects__content-direction_{{project.position}}"
       >
-        <a name="{{project.title}}"></a>
+        <a name="{{project.title}}" class="projects__anchor"></a>
         <!-- <div class="projects__imageContainer"> -->
         <img
           alt="text"
-          src="./assets/images/background/projects-sections/to-learn-to-learn/two_again.png"
+          src="{{site.url}}/assets/images/{{project.image-link}}"
           class="projects__image"
         />
         <!-- </div> -->
@@ -28,9 +28,9 @@ title: Главная | AlexeyNewDeveloper
           class="projects__content projects__content_position_{{project.position}}"
         >
           <h2 class="projects__header">{{project.title}}</h2>
-          <p class="projects__description">
-            {{project.excerpt | strip_html | truncatewords: 50}}
-          </p>
+          <div class="projects__description">
+            {{project.excerpt | truncatewords: 50}}
+          </div>
           <a href="{{project.url}}" class="projects__more-detailed-link"
             >Подробнее &rarr;</a
           >
