wrong link to img

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ title: Главная | AlexeyNewDeveloper
         <!-- <div class="projects__imageContainer"> -->
         <img
           alt="text"
-          src="{{site.url}}/assets/images/{{project.image-link}}"
+          src="{{site.url}}/assets/images{{project.image-link}}"
           class="projects__image"
         />
         <!-- </div> -->
